# arm-to-riscv

./: .gitignore  .gitmodules  CMakeLists.txt  Elf_read.cpp  Elf_read.h  Instruction.cpp  Instruction.h  Memory.cpp  Memory.h  Value.cpp  Value.h  config.h  elf_read.cpp  elf_read.h  main.cpp  memory.cpp  test.c  test.cpp
arm_examples/: bitwise_test.txt  br_test.txt  branching_lots.txt  decrement_branch.txt  decrement_nobranch.txt  factorial.c  factorial.txt  hello_world.txt  instructions.txt  long_loop.txt  simple_add.txt  simple_addition.c  small_loop.txt  square.c  square.txt
arm_examples - Copy/: INFO.txt  hello_world_example.s  loop.txt
